[gd_scene load_steps=3 format=1]

[ext_resource path="res://scenes/Battle/BattleScript.gd" type="Script" id=1]
[ext_resource path="res://imgs/9patchs/9p.png" type="Texture" id=2]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Patch9Frame" type="Patch9Frame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 483.0
margin/right = 1027.0
margin/bottom = 598.0
texture = ExtResource( 2 )
patch_margin/left = 30
patch_margin/top = 30
patch_margin/right = 30
patch_margin/bottom = 30

[node name="Label" type="Label" parent="Patch9Frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 43.0
margin/top = 13.0
margin/right = 1000.0
margin/bottom = 70.0
text = "acertou"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Buttons" type="Node" parent="."]

[node name="Button" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 483.0
margin/right = 135.0
margin/bottom = 531.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button1" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 145.0
margin/top = 484.0
margin/right = 262.0
margin/bottom = 532.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button2" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 542.0
margin/right = 137.0
margin/bottom = 590.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button3" type="Button" parent="Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 143.0
margin/top = 542.0
margin/right = 260.0
margin/bottom = 590.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="pHP" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 451.0
margin/right = 268.0
margin/bottom = 467.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="eHP" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 759.0
margin/top = 10.0
margin/right = 996.0
margin/bottom = 26.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[connection signal="pressed" from="Buttons/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Buttons/Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Buttons/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="Buttons/Button3" to="." method="_on_Button3_pressed"]


